--- a/FormsAndRazor/WebApp/_Menu.cshtml
+++ b/FormsAndRazor/WebApp/_Menu.cshtml
@@ -33,6 +33,7 @@
                 <li><a href="@Href("~/DBPages/DBSingleQuery.cshtml")">PKey Query</a></li>
                 <li><a href="@Href("~/DBPages/MultiRecordQuery.cshtml")">M/R Query</a></li>
                 <li><a href="@Href("~/DBPages/Insert.cshtml")">Insert</a></li>
+                <li><a href="@Href("~/DBPages/ProductSearch.cshtml")">Update/Delete</a></li>
             </ul>
         </li>
         <li><a href="@Href("~/About.cshtml")">About</a></li>
