--- a/RazorSolution/ACentenoWebApp/_Menu.cshtml
+++ b/RazorSolution/ACentenoWebApp/_Menu.cshtml
@@ -24,6 +24,7 @@
                 <li><a href="@Href("~/ExercisePages/Exercise01.cshtml")">Exercise 01</a></li>
                 <li><a href="@Href("~/ExercisePages/Exercise02_A.cshtml")">Exercise 02</a></li>
                 <li><a href="@Href("~/ExercisePages/Exercise03.cshtml")">Exercise 03</a></li>
+                <li><a href="@Href("~/ExercisePages/Exercise04_AlbumSearch.cshtml")">Exercise 04</a></li>
             </ul>
         </li>
     </ul>
