--- a/RazorSolution/ACentenoWebApp/ExercisePages/Exercise04_AlbumSearch.cshtml
+++ b/RazorSolution/ACentenoWebApp/ExercisePages/Exercise04_AlbumSearch.cshtml
@@ -51,7 +51,7 @@
                         grid.Column(columnName: "ArtistID", header: "Artist ID"),
                         grid.Column(columnName: "ReleaseYear", header: "Release Year"),
                         grid.Column(columnName: "ReleaseLabel", header: "Release Label"),
-                        grid.Column(header: "", format: @<text><a href="~/DBPages/Exercise04_AlbumEdit.cshtml?alid=@item.AlbumID">Edit</a></text>)
+                        grid.Column(header: "", format: @<text><a href="~/ExercisePages/Exercise04_AlbumEdit.cshtml?alid=@item.AlbumId">Edit</a></text>)
 ));
                     }
                 }
