--- a/RazorSolution/ACentenoWebApp/ExercisePages/Exercise04_AlbumEdit.cshtml
+++ b/RazorSolution/ACentenoWebApp/ExercisePages/Exercise04_AlbumEdit.cshtml
@@ -2,7 +2,6 @@
     Layout = "~/_Layout.cshtml";
     Page.Title = "Exercise04";
 
-
     var alid = Request.QueryString["alid"];
     if (alid.IsEmpty())
     {
@@ -11,7 +10,7 @@
 
     var albumid = Request.Form["AlbumID"];
     var albumtitle = Request.Form["AlbumTitle"];
-    var artistid = Request.Form["ArtistList"];
+    var artistid = Request.Form["AlbumArtist"];
     var releaseyear = Request.Form["ReleaseYear"];
     var releaselabel = Request.Form["ReleaseLabel"];
 
@@ -23,9 +22,9 @@
 
     var db = Database.Open("CHINOOKDB");
 
-     var artistquery = "SELECT ArtistId, Name  "
-                        + "FROM Artists "
-                        + "ORDER BY Name";
+    var artistquery = "SELECT ArtistId, Name  "
+                       + "FROM Artists "
+                       + "ORDER BY Name";
 
     var artistlist = db.Query(artistquery);
 
@@ -33,6 +32,16 @@
                         + "FROM Albums "
                         + "WHERE AlbumId = @0";
     var queryAlbums = db.QuerySingle(queryStatement, alid);
+
+    Validation.Add("AlbumTitle", Validator.Required("Title is required."));
+    Validation.Add("AlbumTitle", Validator.StringLength(160, 1, "Title should be equal or less than 160 characters."));
+
+    Validation.Add("AlbumArtist", Validator.Required("Artist is required."));
+
+    Validation.Add("ReleaseYear", Validator.Required("Release year is required."));
+    Validation.Add("ReleaseYear", Validator.Range(1950, DateTime.Today.Year, "Year should be between 1950 up to the present year inclusive."));
+
+    Validation.Add("ReleaseLabel", Validator.StringLength(50, 1, "Release label should be equal or less than 50 characters."));
 }
 
 
@@ -53,16 +62,14 @@
         artistid = "0";
         releaseyear = "0";
         releaselabel = "";
-        <p>
-            <span style="color:blue">
-                User has cancel the action. Return to search for another product
-            </span>
-            <a href="~/DBPages/ProductSearch.cshtml">go to search...</a>
-        </p>
+        <div class="alert alert-info" role="alert">
+            No album selected. Return to search for another album
+            <a href="~/ExercisePages/Exercise04_AlbumSearch.cshtml">go to search...</a>
+        </div>
     }
     else if (thebutton.Equals("delete"))
     {
-        //check is there a productid to delete
+        //check if there a productid to delete
         //if not message to use to get new product
         //if present
         //  create delete command
@@ -71,12 +78,10 @@
         //  wrap in try/catch
         if (string.IsNullOrEmpty(albumid))
         {
-            <p>
-                <span style="color:blue">
-                    No product selected. Return to search for another product
-                </span>
-                <a href="~/DBPages/ProductSearch.cshtml">go to search...</a>
-            </p>
+            <div class="alert alert-info" role="alert">
+                No album selected. Return to search for another album
+                <a href="~/ExercisePages/Exercise04_AlbumSearch.cshtml">go to search...</a>
+            </div>
         }
         else
         {
@@ -92,35 +97,25 @@
                         </span>
                     </p>
                     //optionally clear the fields.
-                    //productid = "";
-                    //productname = "";
-                    //supplierid = "0";
-                    //categoryid = "0";
-                    //quantityperunit = "";
-                    //unitprice = "";
-                    //unitsinstock = "";
-                    //unitsonorder = "";
-                    //reorderlevel = "";
-                    //discontinued = "0";
+                    albumid = "";
+                    albumtitle = "";
+                    artistid = "";
+                    releaseyear = "";
+                    releaselabel = "";
                 }
                 else
                 {
-                    <p>
-                        <span style="color:blue">
-                            Delete failed. No product called @albumtitle with an id of @albumid on file.
-                        </span>
-                    </p>
+                    <div class="alert alert-danger" role="alert">
+                        Delete failed. No product called @albumtitle with an id of @albumid on file.
+                    </div>
                 }
 
             }
             catch (Exception ex)
             {
-                <p>
-                    <span style="color:blue">
-                        Deleted failed. Error @ex.Message
-                    </span>
-
-                </p>
+                <div class="alert alert-danger" role="alert">
+                    Deleted failed. Error @ex.Message
+                </div>
             }
         }
     }
@@ -137,25 +132,25 @@
         //      wrap in try/catch
         if (string.IsNullOrEmpty(albumid))
         {
-            <p>
-                <span style="color:blue">
-                    No product selected. Return to search for another product
-                </span>
-                <a href="~/DBPages/ProductSearch.cshtml">go to search...</a>
-            </p>
+            <div class="alert alert-info" role="alert">
+                No product selected. Return to search for another album
+
+                <a href="~/ExercisePages/Exercise04_AlbumSearch.cshtml">go to search...</a>
+            </div>
         }
         else
         {
-            if (Validation.IsValid())
+        if (Validation.IsValid())
+        {
+
+            try
             {
-                try
-                {
-                    var updatecommmand = "UPDATE Albums  "
-                                        + "SET Title = @0, "
-                                        + "ArtistId = @1, "
-                                        + "ReleaseYear = @2, "
-                                        + "ReleaseLabel = @3 "
-                                        + "WHERE AlbumId = @4";
+                var updatecommmand = "UPDATE Albums  "
+                                    + "SET Title = @0, "
+                                    + "ArtistId = @1, "
+                                    + "ReleaseYear = @2, "
+                                    + "ReleaseLabel = @3 "
+                                    + "WHERE AlbumId = @4";
                     //the placeholders expect a value not to be confused
                     // with a character string
                     //the null (as a value) is NOT equal to "null" which is a string
@@ -166,96 +161,120 @@
                         albumid);
                     if (results > 0)
                     {
-                        <p>
-                            <span style="color:green">
-                                Product updated.
-                            </span>
-                        </p>
-                    }
-                    else
-                    {
-                        <p>
-                            <span style="color:blue">
-                                Update failed. No product called @albumtitle with an id of @albumid on file.
-                            </span>
-                        </p>
-                    }
-                }
-                catch (Exception ex)
-                {
-                    <p>
-                        <span style="color:blue">
-                            Deleted failed. Error @ex.Message
-                        </span>
+<div class="alert alert-success" role="alert">
+    Album successfully updated!
+    </div>
+}
+else
+{
+    <p>
+        <span style="color:blue">
+            Update failed. No product called @albumtitle with an id of @albumid on file.
+        </span>
+    </p>
+}
+}
+catch (Exception ex)
+{
+< p >
+        < span style = "color:blue" >
+             Deleted failed.Error @ex.Message
+            </ span >
 
-                    </p>
-                }
-            }
+            </ p >
         }
     }
 }
+}
+}
 else //for IsPost
 {
-    //if this page is being shown for the "first time"
-    //the page accesses the database for the current record
-    //to display to the user
-    queryAlbums = db.QuerySingle(queryStatement, alid);
+//if this page is being shown for the "first time"
+//the page accesses the database for the current record
+//to display to the user
+queryAlbums = db.QuerySingle(queryStatement, alid);
 
-    //moving the current record data to the form controls
-    //NEVER code to the data supplied
-    //the Products table on the Northwind database does not
-    //  have a record where the nullable fields are actual null
-    //the following code takes into account fields which actually
-    //  maybe null
-    albumid = queryAlbums.AlbumId.ToString();
-    albumtitle = queryAlbums.Title.ToString();
-    artistid = queryAlbums.ArtistId == null ? "" : queryAlbums.ArtistId.ToString();
-    releaseyear = queryAlbums.ReleaseYear.ToString();
-    releaselabel = queryAlbums.ReleaseLabel.ToString();
+//moving the current record data to the form controls
+//NEVER code to the data supplied
+//the Products table on the Northwind database does not
+//  have a record where the nullable fields are actual null
+//the following code takes into account fields which actually
+//  maybe null
+albumid = queryAlbums.AlbumId.ToString();
+albumtitle = queryAlbums.Title.ToString();
+artistid = queryAlbums.ArtistId == null ? "" : queryAlbums.ArtistId.ToString();
+releaseyear = queryAlbums.ReleaseYear.ToString();
+releaselabel = queryAlbums.ReleaseLabel.ToString() == null ? "" : queryAlbums.ReleaseLabel.ToString();
 
 }
-<div class="form-group">
 
-    <form id="theForm" action="" method="post">
-        <div class="col-sm-6">
-            <label id="forAlbumID">Album ID</label><br />
-            <label id="forAlbumTitle">Album Title</label><br />
-            <label id="forArtistID">Artist</label><br />
-            <label id="forReleaseYear">Release Year</label><br />
-            <label id="forReleaseLabel">Release Label</label><br />
-        </div>
-        <div class="col-sm-6">
-            <input type="text" name="AlbumID" value="@albumid" readonly /><br />
-            <input type="text" name="AlbumTitle" value="@albumtitle" /><br />
-            <select name="ArtistList">
-                <option value="0">select...</option>
-                @foreach (var acollectionrow in artistlist)
-                {
-                    if (acollectionrow.ArtistId.ToString() == artistid)
-                    {
-                        <option value="@acollectionrow[0]" selected>@acollectionrow[1]</option>
-                    }
-                    else
-                    {
-                        <option value="@acollectionrow[0]">@acollectionrow[1]</option>
-                    }
-                }
-            </select><br />
-            <input type="number" name="ReleaseYear" value="@releaseyear" min="0.00" step="0.01" />
-            <input type="text" name="ReleaseLabel" value="@releaselabel" /><br />
-        </div>
-        <div class="row">
-            <button type="submit" name="theButton" id="theUpdate" class="btn btn-primary" value="update">Update</button>&nbsp;&nbsp;&nbsp;
-            <button type="submit" name="theButton" id="theDelete" class="btn btn-primary" value="delete" formnovalidate>Delete</button>&nbsp;&nbsp;&nbsp;
-            <button type="submit" name="theButton" id="theCancel" class="btn btn-primary" value="cancel" formnovalidate>Cancel</button>
-        </div>
-        @* this javascript will allow for a confirmation dialog to appear
-            when a particular button is pressed (theDelete) *@
-        <script type="text/javascript">
+<div>
+    <div class="row">
+        <div class="col-xs-6">
+            <form class="form-horizontal" id="theForm" action="" method="post">
+                <div class="form-group">
+                    <label class="col-xs-2" id="forAlbumID">Album ID</label>
+                    <div class="col-xs-10">
+                        <input class="form-control" type="text" name="AlbumID" value="@albumid" readonly />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-xs-2" id="forAlbumTitle">Album Title</label>
+                    <div class="col-xs-10">
+                        <input class="form-control" id="AlbumTitle" type="text" name="AlbumTitle" value="@albumtitle" />
+                        <span class="text-danger">@Html.ValidationMessage("AlbumTitle")</span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-xs-2" id="forArtistID">Artist</label>
+                    <div class="col-xs-10">
+                        <select class="form-control" id="AlbumArtist" name="AlbumArtist" value="@artistid">
+                            <option value="">Select Artist...</option>
+                            @foreach (var acollectionrow in artistlist)
+                            {
+                                if (acollectionrow.ArtistId.ToString() == artistid)
+                                {
+                                    <option value="@acollectionrow[0]" selected>@acollectionrow[1]</option>
+                                }
+                                else
+                                {
+                                    <option value="@acollectionrow[0]">@acollectionrow[1]</option>
+                                }
+                            }
+                        </select>
+                        <span class="text-danger">@Html.ValidationMessage("AlbumArtist")</span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-xs-2" id="forReleaseYear">Release Year</label>
+                    <div class="col-xs-10">
+                        <input class="form-control" type="number" id="ReleaseYear" name="ReleaseYear" value="@releaseyear" />
+                        <span class="text-danger">@Html.ValidationMessage("ReleaseYear")</span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-xs-2" id="forReleaseLabel">Release Label</label>
+                    <div class="col-xs-10">
+                        <input class="form-control" id="ReleaseLabel" type="text" name="ReleaseLabel" value="@releaselabel" />
+                        <span class="text-danger">@Html.ValidationMessage("ReleaseLabel")</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-11 text-center">
+                        <button type="submit" name="theButton" id="theUpdate" class="btn btn-primary" value="update">Update</button>&nbsp;&nbsp;&nbsp;
+                        <button type="submit" name="theButton" id="theDelete" class="btn btn-primary" value="delete" formnovalidate>Delete</button>&nbsp;&nbsp;&nbsp;
+                        <button type="submit" name="theButton" id="theCancel" class="btn btn-primary" value="cancel" formnovalidate>Cancel</button>
+                    </div>
+                </div>
+                @* this javascript will allow for a confirmation dialog to appear
+                    when a particular button is pressed (theDelete) *@
+                <script type="text/javascript">
                 document.getElementById("theDelete").onclick = ConfirmDelete;
                 function ConfirmDelete() {
                     return confirm("Are you sure you want to remove @albumtitle");
                 }
-        </script>
-    </form>
+                </script>
+            </form>
+        </div>
+    </div>
 </div>
